Fix spacing issues

--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: flex-end;
   width: 100%;
+  padding-bottom: 3rem;
 
   > div {
     // mobile device: shrink the size of the video player to be as large as the screen
