--- a/src/components/Form/VideoPlayer.scss
+++ b/src/components/Form/VideoPlayer.scss
@@ -1,11 +1,11 @@
 .seek-buttons {
   position: absolute;
-  bottom: -2rem;
-  height: 2rem;
+  bottom: 0;
+  height: 3rem;
 }
 
 .seek-buttons > button {
-  height: 2rem;
+  height: 3rem;
   width: 50%;
   border: none;
   box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.2);
